# atb

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  network_client.cpp  network_client.h  network_junction.cpp  network_junction.h  network_message.h
atb/: CMakeLists.txt  main.cpp
atb.common/: CMakeLists.txt
atb.common/include/: def.h  ip_address_v4.h  logger.h  message_correction_machine.h  network_message.h  thread_safe_queue.h
atb.common/source/: message_correction_machine.cpp
atb.core/: CMakeLists.txt
atb.core/include/: atb_settings.h  atb_settings_loader.h  constants.h  message_parser.h  pipeline.h  zone.h  zone_cashier.h
atb.core/source/: atb_settings.cpp  atb_settings_loader.cpp  constants.h  def.h  global_state.h  message_parser.cpp  mode_handler.h  mode_sync.cpp  mode_sync.h  mode_wo.cpp  mode_wo.h  pipeline.cpp  settings_filter.cpp  settings_filter.h  tag_cashier.cpp  tag_cashier.h  types.h  zone_cashier.cpp  zone_cashier.h
atb.core/source/mode_sync/: mode_sync.cpp  mode_sync.h  sync_state.cpp  sync_state.h
atb.core/source/mode_wo/: mode_wo.cpp  mode_wo.h  wo_state.h
atb.networking/: CMakeLists.txt
atb.networking/include/: def.h  network_client.h  network_junction.h  read_callback.h
atb.networking/source/: network_client.cpp  network_client.h  network_junction.cpp
atb.platform/: CMakeLists.txt
atb.platform/include/: daemonizer.h  platform.h
atb.platform/source/: daemonizer.cpp
atb/include/: application.h  logger_callback.h  logger_callback_implementation.h  logger_hub.h
atb/source/: application.cpp  logger.cpp  logger_hub.cpp  main.cpp
cmake/defines/: platform_definitions.txt
test.atb.common/: CMakeLists.txt
test.atb.common/include/: test_message_correction_machine.h
test.atb.common/source/: test_message_correction_machine.cpp
test.atb.core/: CMakeLists.txt
test.atb.core/include/: test_tag_cashier.h  test_zone_cashier.h
test.atb.core/source/: main.cpp  test_tag_cashier.cpp  test_zone_cashier.cpp
